Adds some basic automation in generating the <<meditation of the day>>

--- a/src/content/index.mdx
+++ b/src/content/index.mdx
@@ -3,11 +3,10 @@ path: /
 title: Leven met God
 ---
 
-import { BlogImage } from '../components/mdx'
+import { BlogImage, MeditationForToday } from '../components/mdx'
 import bookCoverImg from './cover.png'
 
-De meditatie voor vandaag is:
-[89: ZATERDAG NA DE 6e ZONDAG - Herdenking van mijn doopsel II](/89).
+<MeditationForToday />
 
 <BlogImage width='300px' src={bookCoverImg} alt='Book Cover' />
 
