--- a/src/content/biezondere-feesten/389-8-december.mdx
+++ b/src/content/biezondere-feesten/389-8-december.mdx
@@ -53,7 +53,7 @@ dat zuiver bloed,
 die gouden wijn
 het eerst mocht consacreren.
 
-(J. Schreurs.)
+(J. Schreurs)
 </CenteredText>
 
 Vandaar vereren wij Maria, ongetwijfeld als Gods Moeder, want dat is de oorsprong van haar verheven schoonheid, maar toch met biezondere nadruk als de onbevlekte, als de heilige, als de Maagd der maagden.
