--- a/src/content/biezondere-feesten/389-8-december.mdx
+++ b/src/content/biezondere-feesten/389-8-december.mdx
@@ -12,7 +12,7 @@ import { CenteredText } from '../../components/mdx'
 
 _Roemrijke dingen zijn er over u gezegd, want de Machtige heeft grote dingen aan u gedaan._ (Luk. 1:49) Deze woorden laat de Kerk ons op het feest van vandaag bidden als het communie-vers in de mis.
 
-1\. Maria is _onbevlekt ontvangen_; dit betekent _ dat zij geen smet van erfzonde heeft gehad. Zij was de totaal reine, de volstrekt aan God gewijde en geheel bereid zijn diepste genadewerkingen te ondergaan. Terwijl wij - vreemd genoeg - ons op allerlei wijze tegen Gods liefde plegen te verzetten en zijn genade vaak onvruchtbaar maken, was Maria geheel verlangend naar God en naar de goddelijke invloed. In haar vierde de genade haar hoogste overwinning: nooit was iemand die louter mens was zoals wij, zó ontvankelijk voor al het goede en verhevene.
+1\. Maria is _onbevlekt ontvangen_; dit betekent dat zij geen smet van erfzonde heeft gehad. Zij was de totaal reine, de volstrekt aan God gewijde en geheel bereid zijn diepste genadewerkingen te ondergaan. Terwijl wij - vreemd genoeg - ons op allerlei wijze tegen Gods liefde plegen te verzetten en zijn genade vaak onvruchtbaar maken, was Maria geheel verlangend naar God en naar de goddelijke invloed. In haar vierde de genade haar hoogste overwinning: nooit was iemand die louter mens was zoals wij, zó ontvankelijk voor al het goede en verhevene.
 
 Wij worstelen met verleidingen, met gebreken, met verworven en overgeërfde innerlijke obstructies die ons afhouden van de goddelijke roep.
 
