--- a/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
+++ b/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
@@ -27,7 +27,7 @@ Toen werd vervuld wat door de profeet Jeremias was gezegd:
 
 Een stem is in Rama gehoord
 Luid geween en geschrei:
-Rachel be,veent haar kinderen
+Rachel beweent haar kinderen
 En wil niet getroost worden...
 want ze zijn niet meer.
 (Matt. 2 : 17, 18.)
