--- a/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
+++ b/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
@@ -30,7 +30,7 @@ Luid geween en geschrei:
 Rachel beweent haar kinderen
 En wil niet getroost worden...
 want ze zijn niet meer.
-(Matt. 2 : 17, 18.)
+(Matt. 2:17,18)
 </CenteredText>
 
 2\. 
