--- a/src/content/vastentijd/111-1e-zondag.mdx
+++ b/src/content/vastentijd/111-1e-zondag.mdx
@@ -1,7 +1,7 @@
 ---
 path: /111
 title: '111: 1e ZONDAG IN DE VASTEN'
-tag: kerstkring
+tag: vastentijd
 content: ../styling.md
 sortIndex: 111
 ---
