--- a/src/content/vastentijd/111-1e-zondag.mdx
+++ b/src/content/vastentijd/111-1e-zondag.mdx
@@ -32,7 +32,7 @@ _En weet het wel: gij zijt niet met vergankelijk goud en zilver, maar met het ko
 
 Dáár ligt de _goddelijke_ waardering van wat wij zijn en van wat wij doen: God gaf voor ons zijn Zoon... Wij geloven dat, wij zeggen het, en toch zo dikwijls nog is ons gedrag daarmee in strijd... Wij leveren niet op, wat God van ons verwachten mocht na alles wat Hij deed... _Daarom (zegt Paulus) vermanen wij u dat gij Gods genade niet vergeefs ontvangt._
 
-Verdient dit niet een ogenblik van inkeer en... van berouw? _Want de Heer zegt... (Paulus citeert de profeet Isaias (59:8)
+Verdient dit niet een ogenblik van inkeer en... van berouw? _Want de Heer zegt..._ (Paulus citeert de profeet Isaias (59:8))
 
 <CenteredText italic>
 
