--- a/src/content/vastentijd/111-1e-zondag.mdx
+++ b/src/content/vastentijd/111-1e-zondag.mdx
@@ -18,7 +18,7 @@ _Broeders, wij vermanen u Gods genade niet vruchteloos te ontvangen..._ (1 Kor. 
 
 Sint Paulus ziet het gevaar. Te midden van allerlei kansen zijn wij in onze oppervlakkigheid, in onze onbegrijpelijke lichtzinnigheid in staat een eeuwigheid te laten varen voor beuzelarij.
 
-1\. _Gods genade niet vruchteloos ontvangen..._ Het is een genade, een biezondere roeping te bezitten, een ambt, een beroep dat gekerstend en geheiligd, zo wonderbaar veel tot Gods glorie vermag bij te dragen. Ik denk aan de kerstening, aan de heiliging van _mijn_ beroep, van _mijn_ taak, van _mijn_ ambt, en hoe ik in feite word geregeerd door mijn eerzucht en mijn winstbejag... Of - misschien nog erger - ik wil alleen maar werken, ploeteren, draven, eigenlijk meer dan ik verwerken kan om... ja, wáárom? Zonder één hoger motief dat werkelijk meespreekt. God gaf mij talenten, Hij plaatste mij in een omgeving waar ik veel kan doen, Hij bezorgt mij contact met mensen van allerlei rang en stand... wat doe ik met dat alles?...
+1\. _Gods genade niet vruchteloos ontvangen..._ Het is een genade, een biezondere roeping te bezitten, een ambt, een beroep dat gekerstend en geheiligd, zo wonderbaar veel tot Gods glorie vermag bij te dragen. Ik denk aan de kerstening, aan de heiliging van _mijn_ beroep, van _mijn_ taak, van _mijn_ ambt, en hoe ik in feite word geregeerd door mijn eerzucht en mijn winstbejag... Of - misschien nog erger - ik wil alleen maar werken, ploeteren, draven, eigenlijk meer dan ik verwerken kan om... ja, wáárom? Zonder één hoger motief dat werkelijk meespreekt. God gaf mij talenten, Hij plaatste mij in een omgeving waar ik veel kan doen, Hij bezorgt mij contact met mensen van allerlei rang en stand... wat doe ik met dat alles...?
 
 De kansen die in beroep of talent geboden worden zijn slechts genade in afgeleide, in secundaire zin. Het zijn _uitwendige_ genaden. Maar ik ontvang veel meer. Zoveel aansporingen tot het goede, zoveel licht dat mij _inwendig_ verlicht... Met andere woorden: het wordt ons vaak zo duidelijk en zo gemakkelijk gemaakt. Wij kunnen met niet al te veel bekommernis en inspanning zoveel goeds verrichten, wij kunnen zelf zoveel meer uitgroeien tot volwaardige mensen, tot begripvolle, geduldige, wijze medemensen voor onze omgeving... Wij kunnen met wat overleg en offerzin (juist door die inwendige genade), zo gemakkelijk tot een hoger niveau van christelijk leven stijgen. Eigenlijk wordt er niet zo heel veel voor gevraagd.
 
