--- a/src/content/vastentijd/111-1e-zondag.mdx
+++ b/src/content/vastentijd/111-1e-zondag.mdx
@@ -36,7 +36,7 @@ Verdient dit niet een ogenblik van inkeer en... van berouw? _Want de Heer zegt..
 
 <CenteredText italic>
 
-Op de gunstige tijd heh ik u verhoord...
+Op de gunstige tijd heb ik u verhoord...
 En op de dag van het heil u geholpen.
 Ziet, nu is het de gunstige tijd,
 Ziet, nu is het de dag van het heil.
