--- a/src/content/vastentijd/111-1e-zondag.mdx
+++ b/src/content/vastentijd/111-1e-zondag.mdx
@@ -46,7 +46,7 @@ Zo vaak heeft God Israel geholpen, geleid, bewaard. Als de Joden zich keerden to
 
 _Ziet, nu is het de gunstige tijd..._
 
-Nu in deze vasten, is het de tijd om naar God te gaan; om ons af te keren van idolen en waandenkbeelden, ons af te keren van onze grootheidswaanzin, van onze eigenliefde, die ons bits en stuurs maakt, van onze lichtzinnigheid en weergaloze gemakzucht die ons verhinderd hebben te bidden van onze schijnbaar nooit ophoudende sensatielust die ons tot alle rust en ingekeerdheid onbekwaam maakt.
+Nu in deze vasten, is het de tijd om naar God te gaan; om ons af te keren van idolen en waandenkbeelden, ons af te keren van onze grootheidswaanzin, van onze eigenliefde, die ons bits en stuurs maakt, van onze lichtzinnigheid en weergaloze gemakzucht die ons verhinderd hebben te bidden, van onze schijnbaar nooit ophoudende sensatielust die ons tot alle rust en ingekeerdheid onbekwaam maakt.
 
 _Nu, nu is het de gunstige tijd._ Wij zijn immers niet van plan zó door te gaan en straks met lege handen hierboven aan te komen. De verloren dagen keren niet weer, de gemiste kansen blijven verspild... Weer wordt ons Gods hulp aangeboden en worden wij bij de ernstige poging tot levensverbetering uitgenodigd, tot vertrouwen op God. Hij kàn alles, Hij zàl alles doen, als wij meewerken en op Hem vertrouwen.
 
