--- a/src/content/biezondere-feesten/378-19-maart.md
+++ b/src/content/biezondere-feesten/378-19-maart.md
@@ -20,7 +20,7 @@ _Hij heeft voor alle uitverkorenen het Brood van de hemel, dat hemels leven geef
 
 _Hij was een rechtvaardig man,_ zegt het evangelie van vandaag; dat wil zeggen, dat hij een heilige was. Daarom begint ook de introïtus met de lofprijzing van Sint Jozef: _de rechtvaardige zal bloeien als een palmboom; als een ceder van de Libanon zal hij zich uitbreiden._ (Ps. 91) In stilte en eenzaamheid heeft deze heilige gebloeid, maar zijn invloed was zeer groot. Hij vertegenwoordigde God op aarde voor zijn gezin en wel op heel speciale wijze: _de heilige Jozef was hier op aarde als het ware de schaduw van de hemelse Vader_. (Prohászka) Dat is zijn eigenlijke roeping geweest. Door het heilig huisgezin te beschermen was hij reeds op zekere wijze wat hij later gevraagd werd voor alle tijden te zijn: de beschermer van de heilige Kerk.
 
-2\. _Tot mijn voorspreker en heer koos ik de roemvolle heilige Jozef en beval mij heel dringend bij hem aan. En inderdaad, ik heb duidelijk ingezien, dat deze mijn vader en heer geweest is, die mij zowel uit mijn nood van toen als ook uit andere nog grotere noden, die mijn eer en het heil van mijn ziel betroffen, heeft gered en mij zelfs nog meer heeft bezorgd, dan ik hem wist te vragen. Ik _herinner mij niet, dat ik hem tot nu toe om iets heb gevraagd, wat hij mij niet heeft verleend._ (Teresia v. Avila)
+2\. _Tot mijn voorspreker en heer koos ik de roemvolle heilige Jozef en beval mij heel dringend bij hem aan. En inderdaad, ik heb duidelijk ingezien, dat deze mijn vader en heer geweest is, die mij zowel uit mijn nood van toen als ook uit andere nog grotere noden, die mijn eer en het heil van mijn ziel betroffen, heeft gered en mij zelfs nog meer heeft bezorgd, dan ik hem wist te vragen. Ik herinner mij niet, dat ik hem tot nu toe om iets heb gevraagd, wat hij mij niet heeft verleend._ (Teresia v. Avila)
 
 De heilige Jozef zorgt dus nog: hij wil voorspreker en bemiddelaar zijn. Maar dan is het toch vanzelfsprekend, dat wij hem vereren en hem bidden om die voorspraak. Wie Sint Jozef eert, eert God zelf die hem zulk een grote taak heeft toevertrouwd en tot zulk een hoge heiligheid heeft verheven.
 
