--- a/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
+++ b/src/content/kerstkring/32-feest-van-onnozele-kinderen.mdx
@@ -31,9 +31,10 @@ Rachel beweent haar kinderen
 En wil niet getroost worden...
 want ze zijn niet meer.
 (Matt. 2:17,18)
+
 </CenteredText>
 
-2\. 
+2\.
 
 <CenteredText italic>
 
@@ -74,8 +75,9 @@ En heerlijk tot Gods eer zal bloeien
 En door geen wreedheid en vergaat.
 
 (Vondel)
+
 </CenteredText>
 
 Hoeveel moeders denken op dit feest niet aan hun te vroeg ontslapen kind, dat zij zo pijnlijk misten? Maar voor God leeft de onschuld eeuwig... Zijn raadsbesluiten zijn ondoorgrondelijk, maar wijs en altijd liefdevol, ook al ontgaat ons klein verstand de diepe zin daarvan.
 
-_Heer, vandaag hebben de onschuldige kinderen niet door te spreken maar door voor u te sterven, uw lof verkondigd... laat ons door ons leven U onze trouw bewijzen, terwijl wij met woorden van die trouw getuigen. Zij - de vennoorde kinderen - zijn uw eerste martelaren (dat wil zeggen: uw getuigen) door te zwijgen en te sterven; wij Heer, willen uw getuigen zijn door ons woord en meer nog door ons leven. Amen._
+_Heer, vandaag hebben de onschuldige kinderen niet door te spreken maar door voor u te sterven, uw lof verkondigd... laat ons door ons leven U onze trouw bewijzen, terwijl wij met woorden van die trouw getuigen. Zij - de vermoorde kinderen - zijn uw eerste martelaren (dat wil zeggen: uw getuigen) door te zwijgen en te sterven; wij Heer, willen uw getuigen zijn door ons woord en meer nog door ons leven. Amen._
